--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         </p>
         <div id="content-section">
           <a href="apropos.html">
-            Plus Sur Moi <i class="ri-arrow-right-line"></i
-          ></a>
+            Plus Sur Moi <i class="ri-arrow-right-line"></i>
+          </a>
         </div>
+        <div id="overlay" class="overlay"></div>
         <div class="right-sidebar">
           <i class="ri-menu-line"></i>
           <a href="index.html"> Accueil<i class="ri-home-4-fill"></i> </a>
@@ -55,5 +56,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
