--- a/Portefeuille.html
+++ b/Portefeuille.html
@@ -56,5 +56,7 @@
         <a href="contact.html"> Contact<i class="ri-mail-open-fill"></i> </a>
       </div>
     </div>
+    <script src="scripts.js"></script>
+
   </body>
 </html>
